[gd_scene load_steps=49 format=1]

[ext_resource path="res://JetpackGameMode/JetpackGame.gd" type="Script" id=1]
[ext_resource path="res://JetpackGameMode/Camera/Camera.gd" type="Script" id=2]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_3_0.png" type="Texture" id=3]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_3_1.png" type="Texture" id=4]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_3_2.png" type="Texture" id=5]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_3_3.png" type="Texture" id=6]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_3_4.png" type="Texture" id=7]
[ext_resource path="res://JetpackGameMode/BG/BG_LooperH.gd" type="Script" id=8]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_2_0.png" type="Texture" id=9]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_2_1.png" type="Texture" id=10]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_2_2.png" type="Texture" id=11]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_2_3.png" type="Texture" id=12]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_2_4.png" type="Texture" id=13]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_1_0.png" type="Texture" id=14]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_1_1.png" type="Texture" id=15]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_1_2.png" type="Texture" id=16]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_1_3.png" type="Texture" id=17]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_1_4.png" type="Texture" id=18]
[ext_resource path="res://JetpackGameMode/BG/JetpackGame_Parallax_0.png" type="Texture" id=19]
[ext_resource path="res://JetpackGameMode/BG/BG_LooperH2.gd" type="Script" id=20]
[ext_resource path="res://JetpackGameMode/Character/Jetpack_Astronaut.gd" type="Script" id=21]
[ext_resource path="res://JetpackGameMode/Character/JetpackGame_Character.png" type="Texture" id=22]
[ext_resource path="res://JetpackGameMode/Obstacles/ScreenLimits.tscn" type="PackedScene" id=23]
[ext_resource path="res://JetpackGameMode/Obstacles/PipeTentacles.tscn" type="PackedScene" id=24]
[ext_resource path="res://Fonts/OrbitronMedium30.fnt" type="BitmapFont" id=25]
[ext_resource path="res://JetpackGameMode/HUD/pngs/stamina_over.png" type="Texture" id=26]
[ext_resource path="res://JetpackGameMode/HUD/pngs/stamina_progress.png" type="Texture" id=27]
[ext_resource path="res://JetpackGameMode/HUD/AmmunitionManager.gd" type="Script" id=28]
[ext_resource path="res://JetpackGameMode/PauseScreen/PauseScreen.tscn" type="PackedScene" id=29]
[ext_resource path="res://JetpackGameMode/GameOverScreen/GameOverScreen.tscn" type="PackedScene" id=30]
[ext_resource path="res://JetpackGameMode/Screen_Countdown/CountdownScreen.tscn" type="PackedScene" id=31]
[ext_resource path="res://JetpackGameMode/Screens/Tutorial/TutorialScreen.tscn" type="PackedScene" id=32]

[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( -50, 0 )
b = Vector2( 1970, 0 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 582.422 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="CanvasItemShader" id=6]

_code = {
"fragment": "uniform float outline_width=2.0;
uniform color outline_color=vec4(0,0,0,1);

vec4 col = tex(TEXTURE,UV);
vec2 ps = TEXTURE_PIXEL_SIZE;
float a;
float maxa=col.a;
float mina=col.a;
a=tex(TEXTURE,UV+vec2(0,-outline_width)*ps).a;
maxa=max(a,maxa); 
mina=min(a,mina);
a=tex(TEXTURE,UV+vec2(0,outline_width)*ps).a;
maxa=max(a,maxa); 
mina=min(a,mina);
a=tex(TEXTURE,UV+vec2(-outline_width,0)*ps).a;
maxa=max(a,maxa); 
mina=min(a,mina);
a=tex(TEXTURE,UV+vec2(outline_width,0)*ps).a;
maxa=max(a,maxa); 
mina=min(a,mina);

COLOR=mix(col,outline_color,maxa-mina);",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=7]

shader/shader = SubResource( 6 )
shader/shading_mode = 0
shader_param/outline_width = 6.0
shader_param/outline_color = Color( 0.0235294, 0.0666667, 0.172549, 1 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 24.6781, 27.1512 )

[sub_resource type="ColorRamp" id=9]

offsets = FloatArray( 0, 0.00584795, 0.192308, 0.423077, 0.969231, 1 )
colors = ColorArray( 0, 0, 0, 1, 0.0265961, 0.839617, 0.972656, 1, 1, 0.644287, 0.03125, 1, 1, 0, 0, 0.757412, 1, 1, 1, 0.459569, 1, 1, 1, 0 )

[sub_resource type="SpriteFrames" id=10]

animations = [ {
"frames": [ ExtResource( 22 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=11]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -480, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:transform/rot")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:transform/scale")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="CanvasItemShaderGraph" id=12]

_code = {
"fragment": "uniform color Color=vec4(1,1,1,1);
vec3 nd2sl0=Color.rgb;
float nd2sl1=Color.a;
COLOR.rgb=nd2sl0;
",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}
_data = {
"shaders": [ [ 0, 33, Vector2( 350, 40 ), null, null, [  ], 1, 0, Vector2( 50, 40 ), null, null, [  ] ], [ 0, 33, Vector2( 721, 35 ), null, null, [ 0, 2, 0 ], 1, 0, Vector2( 138, 43 ), null, null, [  ], 2, 28, Vector2( 416, 34 ), "Color", Color( 1, 1, 1, 1 ), [  ] ], [ 0, 33, Vector2( 350, 40 ), null, null, [  ], 1, 0, Vector2( 50, 40 ), null, null, [  ] ] ]
}

[sub_resource type="CanvasItemMaterial" id=13]

shader/shader = SubResource( 12 )
shader/shading_mode = 0
shader_param/Color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=14]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:material/material:shader_param/Color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:material/material:shader_param/Color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.25098, 0.0901961, 0.454902, 1 ), Color( 1, 0.227451, 0.172549, 1 ) ]
}

[sub_resource type="Animation" id=16]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:material/material:shader_param/Color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.25098, 0.0901961, 0.454902, 1 ) ]
}

[node name="JetpackGame" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 960, 540 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = 0
limit/right = 10000000
limit/bottom = 0
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 25.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="Limites" type="StaticBody2D" parent="Camera2D"]

editor/display_folded = true
transform/pos = Vector2( -960, -540 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 1080 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Limites"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="Camera2D/Limites"]

transform/pos = Vector2( 0, 1080 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1

[node name="TentacleTrigger" type="Area2D" parent="Camera2D"]

transform/pos = Vector2( 650, 0 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Collision" type="CollisionShape2D" parent="Camera2D/TentacleTrigger"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true

[node name="Parallax3" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 0.25, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite0" type="AnimatedSprite" parent="ParallaxBackground/Parallax3"]

editor/display_folded = true
transform/pos = Vector2( 1010, 540 )
frames = SubResource( 3 )
animation = "default"
script/script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="EndPoint" type="Position2D" parent="ParallaxBackground/Parallax3/Sprite0"]

visibility/visible = false
transform/pos = Vector2( 1010, 540 )

[node name="Sprite1" type="AnimatedSprite" parent="ParallaxBackground/Parallax3"]

editor/display_folded = true
transform/pos = Vector2( 3030, 540 )
frames = SubResource( 3 )
animation = "default"
frame = 2
script/script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="EndPoint" type="Position2D" parent="ParallaxBackground/Parallax3/Sprite1"]

visibility/visible = false
transform/pos = Vector2( 1010, 540 )

[node name="Parallax2" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 0.4, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite0" type="AnimatedSprite" parent="ParallaxBackground/Parallax2"]

editor/display_folded = true
transform/pos = Vector2( 1010, 540 )
frames = SubResource( 4 )
animation = "default"
frame = 1
script/script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="EndPoint" type="Position2D" parent="ParallaxBackground/Parallax2/Sprite0"]

visibility/visible = false
transform/pos = Vector2( 1010, 540 )

[node name="Sprite1" type="AnimatedSprite" parent="ParallaxBackground/Parallax2"]

editor/display_folded = true
transform/pos = Vector2( 3030, 540 )
frames = SubResource( 4 )
animation = "default"
frame = 3
script/script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="EndPoint" type="Position2D" parent="ParallaxBackground/Parallax2/Sprite1"]

visibility/visible = false
transform/pos = Vector2( 1010, 540 )

[node name="Parallax1" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 0.5, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="Sprite0" type="AnimatedSprite" parent="ParallaxBackground/Parallax1"]

editor/display_folded = true
transform/pos = Vector2( 1010, 540 )
frames = SubResource( 5 )
animation = "default"
frame = 2
script/script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="EndPoint" type="Position2D" parent="ParallaxBackground/Parallax1/Sprite0"]

visibility/visible = false
transform/pos = Vector2( 1010, 540 )

[node name="Sprite1" type="AnimatedSprite" parent="ParallaxBackground/Parallax1"]

editor/display_folded = true
transform/pos = Vector2( 3030, 540 )
frames = SubResource( 5 )
animation = "default"
frame = 4
script/script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="EndPoint" type="Position2D" parent="ParallaxBackground/Parallax1/Sprite1"]

visibility/visible = false
transform/pos = Vector2( 1010, 540 )

[node name="Parallax0" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 0.75, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="Sprite0" type="Sprite" parent="ParallaxBackground/Parallax0"]

visibility/light_mask = 1024
material/material = SubResource( 7 )
transform/pos = Vector2( 960, 540 )
texture = ExtResource( 19 )
script/script = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="EndPoint" type="Position2D" parent="ParallaxBackground/Parallax0/Sprite0"]

visibility/visible = false
transform/pos = Vector2( 960, 540 )

[node name="Bullets" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="." groups=[
"player",
]]

transform/pos = Vector2( 961, 534 )
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1.07969, -491.24, -11.2123 )
shapes/0/trigger = false
collision/layers = 4097
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 21 )

[node name="JetParticles" type="Particles2D" parent="Player"]

transform/pos = Vector2( -517.497, 7.80145 )
config/amount = 24
config/lifetime = 0.3
config/emitting = false
config/process_mode = 1
config/local_space = false
params/direction = 330.0
params/spread = 10.0
params/linear_velocity = 300.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 20.0
params/final_size = 50.0
params/hue_variation = 1.0
params/anim_speed_scale = 0.0
params/anim_initial_pos = 0.0
randomness/direction = 1.0
randomness/spread = 15.0
randomness/spin_velocity = 10.0
randomness/hue_variation = 0.03
color/color = Color( 1, 1, 1, 0 )
color/color_ramp = SubResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]

transform/pos = Vector2( -480, 0 )
frames = SubResource( 10 )
animation = "idle"

[node name="Collision" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( -491.24, -11.2123 )
transform/scale = Vector2( 1, 1.07969 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/base = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "base"

[node name="BulletSpawn" type="Position2D" parent="Player"]

visibility/behind_parent = true
transform/pos = Vector2( -435, 0 )

[node name="Obstaculos" type="Node2D" parent="."]

[node name="BottomScreenLimits0" parent="Obstaculos" instance=ExtResource( 23 )]

transform/pos = Vector2( 0, 1019 )

[node name="BottomScreenLimits1" parent="Obstaculos" instance=ExtResource( 23 )]

transform/pos = Vector2( 2370, 1019 )

[node name="TopScreenLimits0" parent="Obstaculos" instance=ExtResource( 23 )]

transform/pos = Vector2( 0, 61 )
transform/scale = Vector2( 1, -1 )

[node name="TopScreenLimits1" parent="Obstaculos" instance=ExtResource( 23 )]

transform/pos = Vector2( 2370, 61 )
transform/scale = Vector2( 1, -1 )

[node name="PipeTentacles0" parent="Obstaculos" instance=ExtResource( 24 )]

[node name="PipeTentacles1" parent="Obstaculos" instance=ExtResource( 24 )]

transform/pos = Vector2( 3840, 540 )

[node name="HUD" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Score" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 44.0
margin/top = 88.0
margin/right = 152.0
margin/bottom = 125.0
custom_fonts/font = ExtResource( 25 )
text = "Score:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Points" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 88.0
margin/right = 260.0
margin/bottom = 125.0
custom_fonts/font = ExtResource( 25 )
text = "0000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureProgress" type="TextureProgress" parent="HUD"]

material/material = SubResource( 13 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 128.0
margin/right = 261.0
margin/bottom = 178.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = ExtResource( 26 )
texture/progress = ExtResource( 27 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Ammunition" type="Node2D" parent="HUD/TextureProgress"]

editor/display_folded = true
script/script = ExtResource( 28 )

[node name="AmmoSlot1" type="Position2D" parent="HUD/TextureProgress/Ammunition"]

transform/pos = Vector2( 8, 77 )

[node name="AmmoSlot2" type="Position2D" parent="HUD/TextureProgress/Ammunition"]

transform/pos = Vector2( 30, 77 )

[node name="AmmoSlot3" type="Position2D" parent="HUD/TextureProgress/Ammunition"]

transform/pos = Vector2( 52, 77 )

[node name="AmmoSlot4" type="Position2D" parent="HUD/TextureProgress/Ammunition"]

transform/pos = Vector2( 74, 77 )

[node name="AmmoSlot5" type="Position2D" parent="HUD/TextureProgress/Ammunition"]

transform/pos = Vector2( 96, 77 )

[node name="AmmoSlot6" type="Position2D" parent="HUD/TextureProgress/Ammunition"]

transform/pos = Vector2( 118, 77 )

[node name="AmmoSlot7" type="Position2D" parent="HUD/TextureProgress/Ammunition"]

transform/pos = Vector2( 140, 77 )

[node name="AmmoSlot8" type="Position2D" parent="HUD/TextureProgress/Ammunition"]

transform/pos = Vector2( 162, 77 )

[node name="AmmoSlot9" type="Position2D" parent="HUD/TextureProgress/Ammunition"]

transform/pos = Vector2( 184, 77 )

[node name="AmmoSlot10" type="Position2D" parent="HUD/TextureProgress/Ammunition"]

transform/pos = Vector2( 206, 77 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/TextureProgress"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/base = SubResource( 14 )
anims/overheated = SubResource( 15 )
anims/undashable = SubResource( 16 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AboveScreen" type="CanvasLayer" parent="."]

process/pause_mode = 2
layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="PauseScreen" parent="AboveScreen" instance=ExtResource( 29 )]

visibility/visible = false

[node name="GameOverScreen" parent="AboveScreen" instance=ExtResource( 30 )]

visibility/visible = false

[node name="CountdownScreen" parent="AboveScreen" instance=ExtResource( 31 )]

visibility/visible = false

[node name="TutorialScreen" parent="AboveScreen" instance=ExtResource( 32 )]

visibility/visible = false

[connection signal="scored" from="Obstaculos/PipeTentacles0" to="." method="_on_scored"]

[connection signal="scored" from="Obstaculos/PipeTentacles1" to="." method="_on_scored"]


